--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,7 @@
 html, body {
     font-family: "Wanted Sans Variable", "Wanted Sans", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
+
+.data-\[loaded\=true\]\:opacity-100[data-loaded="true"].opacity-25 {
+    opacity: .25 !important;
+}
